--- a/index.html
+++ b/index.html
@@ -18,7 +18,43 @@
 <body>
 
 
-  
+  <div class="container">
+
+    <header class="header">
+      <img src="images/logo.svg" alt="Base Apparel Logo">
+    </header>
+
+    <section class="text">
+
+      <h1 class="text__heading">
+        <span text__heading--pink>We're</span>
+        <span text__heading>coming</span>
+        <span text__heading--pink>soon</span>
+      </h1>
+
+      <p class="text__para">
+        Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+      
+
+      <form action="" class="text__form">
+        <label for="email" class="text__form__email__label">
+          <input type="text" class="text__form__email" placeholder="Email Address" name="email" id="email">
+          <img src="images/icon-error.svg" alt="">
+          <p class="error-msg">Error is here</p>
+        </label>
+
+        <input type="submit"  class="text__form__submit"  class="submit">
+
+        </form>
+    </section>
+
+    <section class="pic">
+     <img src="images/hero-desktop.jpg" alt="">
+    </section>
+
+  </div>
 
   
   <footer>
