--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -27,9 +28,9 @@
     <section class="text">
 
       <h1 class="text__heading">
-        <span text__heading--pink>We're</span>
-        <span text__heading>coming</span>
-        <span text__heading--pink>soon</span>
+        <span class="text__heading--pink">We're</span>
+        <span>coming</span>
+        <span>soon</span>
       </h1>
 
       <p class="text__para">
@@ -41,11 +42,11 @@
       <form action="" class="text__form">
         <label for="email" class="text__form__email__label">
           <input type="text" class="text__form__email" placeholder="Email Address" name="email" id="email">
-          <img src="images/icon-error.svg" alt="">
+          <img class="error-icon" src="images/icon-error.svg" alt="">
           <p class="error-msg">Error is here</p>
         </label>
 
-        <input type="submit"  class="text__form__submit"  class="submit">
+        <a type="submit"  class="text__form__submit"  id="submit"><img src="images/icon-arrow.svg" alt=""></a>
 
         </form>
     </section>
@@ -57,11 +58,11 @@
   </div>
 
   
-  <footer>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
