--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
 
     <header class="header">
-      <img src="images/logo.svg" alt="Base Apparel Logo">
+      <img class="header__logo" src="images/logo.svg" alt="Base Apparel Logo">
     </header>
 
     <section class="text">
@@ -52,7 +52,10 @@
     </section>
 
     <section class="pic">
-     <img src="images/hero-desktop.jpg" alt="">
+      <picture>
+        <source srcset="images/hero-mobile.jpg" media="(max-width: 550px)">
+        <img class="large-hero__image" media="(min-width: 2000px)" src="images//hero-desktop.jpg" alt="hero image">
+      </picture>
     </section>
 
   </div>
